--- a/examples/wap/index.html
+++ b/examples/wap/index.html
@@ -1,15 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Palette Extractor</title>
-</head>
-<body>
-    <h1>Palette Extractor</h1>
-    <input type="file" id="image-upload" />
-    <canvas id="canvas" style="display:none;"></canvas>
+    <title>Dominant Color Extractor (JavaScript)</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 2rem;
+        }
 
-    <script src="main.js"></script>
+        input {
+            margin-bottom: 1rem;
+        }
+
+        #imagePreview {
+            max-width: 300px;
+            max-height: 300px;
+            margin: 1rem auto;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            display: none;
+            /* 默认隐藏 */
+        }
+
+        #palette {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            /* 水平居中 */
+            gap: 1rem;
+            margin-top: 2rem;
+        }
+
+        .color-box {
+            width: 120px;
+            height: 120px;
+            border-radius: 12px;
+            color: white;
+            font-weight: bold;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 0.5rem;
+            text-shadow: 0 0 3px rgba(0, 0, 0, 0.7);
+        }
+
+        canvas {
+            display: none;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Dominant Color Extractor</h1>
+    <input type="file" id="imageInput" accept="image/*">
+    <img id="imagePreview" alt="Image Preview">
+    <canvas id="canvas"></canvas>
+    <div id="palette"></div>
+
+    <script src="palette.js"></script>
+    <script>
+        const imageInput = document.getElementById('imageInput');
+        const imagePreview = document.getElementById('imagePreview');
+        const canvas = document.getElementById('canvas');
+        const ctx = canvas.getContext('2d');
+        const paletteDiv = document.getElementById('palette');
+
+        function rgbToHex(r, g, b) {
+            return (
+                '#' +
+                [r, g, b]
+                    .map((x) => {
+                        const hex = x.toString(16);
+                        return hex.length === 1 ? '0' + hex : hex;
+                    })
+                    .join('')
+            );
+        }
+
+        imageInput.addEventListener('change', (e) => {
+            const file = e.target.files[0];
+            if (!file) return;
+
+            const img = new Image();
+            img.onload = () => {
+                imagePreview.src = img.src;
+                imagePreview.style.display = 'block'; // 显示预览图
+
+                // ==== 缩放处理 ====
+                const maxSize = 200;
+                const scale = Math.min(maxSize / img.width, maxSize / img.height, 1);
+                const newW = Math.floor(img.width * scale);
+                const newH = Math.floor(img.height * scale);
+                canvas.width = newW;
+                canvas.height = newH;
+                ctx.clearRect(0, 0, newW, newH);
+                ctx.drawImage(img, 0, 0, newW, newH);
+
+                const { data } = ctx.getImageData(0, 0, newW, newH);
+                const swatches = extractSwatches(data, true, 8);
+
+                paletteDiv.innerHTML = '';
+                for (const [name, color] of Object.entries(swatches)) {
+                    if (!color) continue;
+                    const hex = rgbToHex(color.r, color.g, color.b);
+                    const div = document.createElement('div');
+                    div.className = 'color-box';
+                    div.style.backgroundColor = hex;
+                    div.innerHTML = `<div>${name}</div><div>${hex}</div>`;
+                    paletteDiv.appendChild(div);
+                }
+            };
+            img.src = URL.createObjectURL(file);
+        });
+    </script>
 </body>
+
 </html>
